--- a/styles/footer.css
+++ b/styles/footer.css
@@ -90,3 +90,10 @@
         padding-right: 0;
     }
 }
+
+@media(max-width:400px){
+    .contacts-grid {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+}
