--- a/styles/projects.css
+++ b/styles/projects.css
@@ -86,7 +86,8 @@
     }
     .project1,
     .project2,
-    .project3 {
+    .project3, 
+    .project4 {
         flex-direction: column; 
     }
 }
