--- a/styles/footer.css
+++ b/styles/footer.css
@@ -92,19 +92,22 @@
 }
 
 @media(max-width:400px){
+    .contact-section{
+        height: 100px;
+    }
     .contact-phone, .contact-mail, .contact-linkedin {
         height: 30px;
     }
     .contact-mail{
-        width: 45%;
+        width: 50%;
         min-width: 110px;
     }
     .contact-linkedin {
-        width: 20%;
+        width: 22%;
         min-width: 100px;
     }
     .contact-phone {
-        width: 25%;
+        width: 26%;
         min-width: 100px;
     }
     .icon {
@@ -112,7 +115,6 @@
         height: 15px;
         padding: 2px;
     }
-    
     .contact-text {
         font-size: 12px;
     }
