--- a/styles/lexy_gregory_about.css
+++ b/styles/lexy_gregory_about.css
@@ -180,7 +180,16 @@
         height: 350px;
     }
     .about-page-2{
-        height: 750px;
+        height: 900px;
+    }
+    .get-to-know{
+        margin-top: 100px;
+    }
+    .photo-of-me{
+        padding-top: 20px;
+        height: 400px;
+        width: 100%;
+        margin-right: 0px;
     }
     
 }
