--- a/styles/lexy_gregory_about.css
+++ b/styles/lexy_gregory_about.css
@@ -181,14 +181,15 @@
     }
     .about-page-2{
         height: 900px;
+        justify-content: flex-end;
     }
     .get-to-know{
         margin-top: 100px;
     }
     .photo-of-me{
         padding-top: 20px;
-        height: 400px;
-        width: 100%;
+        height: 325px;
+        width: 300px;
         margin-right: 0px;
     }
     
